reworked dijkstra to have fewer functions and more flexibility