@@ -27,11 +27,12 @@ public class Day17_2023 implements Puzzle {
     public Object solvePart1(PuzzleInput input) {
         State start = new State(0, 0, 0, -1);
 
-        return Dijkstra.findPathWithMultipleEnds(start,
-            s -> s.y == input.getLines().size() - 1 && s.x == input.getLines().get(0).length() - 1,
-            s -> getPaths(s, input.getLines().get(0).length(), input.getLines().size()),
-            (state, score) -> score + Integer.parseInt(input.getLines().get((int) state.y).charAt((int) state.x)+ "")
-            );
+        return Dijkstra.<State>findPath()
+            .from(start)
+            .to(s -> s.y == input.getLines().size() - 1 && s.x == input.getLines().get(0).length() - 1)
+            .generateNextSteps(s -> getPaths(s, input.getLines().get(0).length(), input.getLines().size()))
+            .withAccumulator((state, score) -> score + Integer.parseInt(input.getLines().get((int) state.y).charAt((int) state.x)+ ""))
+            .getFirst().getDistance();
     }
 
     @Override
